--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
         with:
           role-to-assume: arn:aws:iam::736548753645:role/GithubRole
-          aws-region: eu-west-1
+          aws-region: ap-south-1
 
       - name: Checkout Genzinfra-Cloudformation
         uses: actions/checkout@v3
