--- a/.github/workflows/ecs-force-deploy-service.yml
+++ b/.github/workflows/ecs-force-deploy-service.yml
@@ -45,9 +45,11 @@ env:
 
 jobs:
   force-deploy-ecs-service:
-    runs-on: eu1
+    runs-on: ubuntu-latest
     timeout-minutes: 60
-    
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Checkout Infra-Actions Repository
         uses: actions/checkout@v3
@@ -178,6 +180,7 @@ jobs:
             echo "WARNING: $FAILED_TASKS failed tasks detected"
             echo "DEPLOYMENT_STATUS=warning" >> $GITHUB_ENV
           fi
+          
 
       - name: Create Summary Report
         if: always()
