--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -109,10 +109,13 @@ jobs:
 
       - name: Download AWS Nuke
         run: |
-          echo "Downloading AWS Nuke..."
-          LATEST_RELEASE=$(curl -s https://api.github.com/repos/rebuy-de/aws-nuke/releases/latest | jq -r .tag_name)
-          wget -c https://github.com/rebuy-de/aws-nuke/releases/download/v2.25.0/aws-nuke-v2.25.0-linux-amd64.tar.gz -O - | tar -xz -C $HOME/bin
-          
+          echo "Downloading AWS nuke"
+          VERSION="v2.25.0"
+          wget -c "https://github.com/rebuy-de/aws-nuke/releases/download/$VERSION/aws-nuke-$VERSION-linux-amd64.tar.gz" -O - | sudo tar -xz -C /usr/local/bin/
+
+          sudo mv /usr/local/bin/aws-nuke-v2.25.0-linux-amd64 /usr/local/bin/aws-nuke
+          sudo chmod +x /usr/local/bin/aws-nuke
+
           # Verify installation
           ./aws-nuke version
 
