--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -117,7 +117,7 @@ jobs:
           sudo chmod +x /usr/local/bin/aws-nuke
 
           # Verify installation
-          ./aws-nuke version
+          aws-nuke version
 
       - name: Update Config File with Account ID
         run: |
@@ -129,12 +129,12 @@ jobs:
           echo "Config file updated for account ${{ inputs.AWS_ACCOUNT_ID }}"
           
           # Validate config file syntax
-          ./aws-nuke --config aws-nuke-config.yaml --profile default --region ${{ inputs.AWS_REGION }} --list-resource-types > /dev/null
+          aws-nuke --config aws-nuke-config.yaml --profile default --region ${{ inputs.AWS_REGION }} --list-resource-types > /dev/null
           echo "Config file syntax is valid"
 
       - name: List Resources to be Deleted
         run: |
-          ./aws-nuke --config aws-nuke-config.yaml --profile default --region ${{ inputs.AWS_REGION }} --list-resource-types
+          aws-nuke --config aws-nuke-config.yaml --profile default --region ${{ inputs.AWS_REGION }} --list-resource-types
           
       - name: Execute AWS Nuke
         run: |
@@ -144,7 +144,7 @@ jobs:
           echo "Timestamp: $(date)"
           
           # Execute aws-nuke with the specified flags
-          ./aws-nuke \
+          aws-nuke \
             --config aws-nuke-config.yaml \
             --profile default \
             --region ${{ inputs.AWS_REGION }} \
@@ -158,12 +158,12 @@ jobs:
           echo "Verifying account is clean..."
           
           # List remaining resources
-          REMAINING_RESOURCES=$(./aws-nuke --config aws-nuke-config.yaml --profile default --region ${{ inputs.AWS_REGION }} --list-resource-types 2>/dev/null | wc -l)
+          REMAINING_RESOURCES=$(aws-nuke --config aws-nuke-config.yaml --profile default --region ${{ inputs.AWS_REGION }} --list-resource-types 2>/dev/null | wc -l)
           
           if [ "$REMAINING_RESOURCES" -gt 0 ]; then
             echo "WARNING: $REMAINING_RESOURCES resource types still exist"
             echo "Remaining resources:"
-            ./aws-nuke --config aws-nuke-config.yaml --profile default --region ${{ inputs.AWS_REGION }} --list-resource-types
+            aws-nuke --config aws-nuke-config.yaml --profile default --region ${{ inputs.AWS_REGION }} --list-resource-types
           else
             echo "Account appears to be clean"
           fi
