--- a/aws-nuke-config.yaml
+++ b/aws-nuke-config.yaml
@@ -1,26 +1,10 @@
 regions:
   - ap-northeast-2
 
-blocklist:
+account-blocklist:
   - "337909764629" # Management Account
   - "246705294232" # Custom-Customer-Resources
   - "062484260092" # CleverTap SaaS Platform
-
-
-settings:
-  EC2Image:
-    IncludeDisabled: true
-    IncludeDeprecated: true
-    DisableDeregistrationProtection: true
-  EC2Instance:
-    DisableStopProtection: true
-    DisableDeletionProtection: true
-  RDSInstance:
-    DisableDeletionProtection: true
-  CloudFormationStack:
-    DisableDeletionProtection: true
-  DynamoDBTable:
-    DisableDeletionProtection: true
 
 resource-types:
   excludes:
