--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -105,12 +105,12 @@ jobs:
           echo "Config file updated for account ${{ inputs.AWS_ACCOUNT_ID }}"
           
           # Validate config file syntax
-          aws-nuke --config aws-nuke-config.yaml --profile default resource-types > /dev/null
+          aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} resource-types > /dev/null
           echo "Config file syntax is valid"
 
       - name: List Resources to be Deleted
         run: |
-          aws-nuke --config aws-nuke-config.yaml --profile default resource-types
+          aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} resource-types
           
       - name: Execute AWS Nuke
         run: |
@@ -121,7 +121,7 @@ jobs:
           # Execute aws-nuke with the specified flags
           aws-nuke \
             --config aws-nuke-config.yaml \
-            --profile default \
+            --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} \
             --no-dry-run \
             --force
           
@@ -132,12 +132,12 @@ jobs:
           echo "Verifying account is clean..."
           
           # List remaining resources
-          REMAINING_RESOURCES=$(aws-nuke --config aws-nuke-config.yaml --profile default resource-types 2>/dev/null | wc -l)
+          REMAINING_RESOURCES=$(aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} resource-types 2>/dev/null | wc -l)
           
           if [ "$REMAINING_RESOURCES" -gt 0 ]; then
             echo "WARNING: $REMAINING_RESOURCES resource types still exist"
             echo "Remaining resources:"
-            aws-nuke --config aws-nuke-config.yaml --profile default resource-types
+            aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} resource-types
           else
             echo "Account appears to be clean"
           fi
