--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -65,28 +65,17 @@ jobs:
           fi
           
           echo "Input validation passed"
-
-      - name: Display Configuration
-        run: |
-          echo "AWS Nuke Configuration"
-          echo "Account ID: ${{ inputs.AWS_ACCOUNT_ID }}"
-          echo "Access Key ID: ${AWS_ACCESS_KEY_ID:0:4}****${AWS_ACCESS_KEY_ID: -4}"
-          echo "Secret Access Key: ****"
-          
+   
       - name: Verify AWS Credentials
         run: |
           echo "Verifying AWS credentials..."
-          
-          # Test AWS credentials
           aws sts get-caller-identity
-          
-          # Verify we're in the correct account
+          # Verifying that we're in the correct account
           CALLER_ACCOUNT=$(aws sts get-caller-identity --query Account --output text)
           if [ "$CALLER_ACCOUNT" != "${{ inputs.AWS_ACCOUNT_ID }}" ]; then
             echo "ERROR: Credentials are for account $CALLER_ACCOUNT, but you specified ${{ inputs.AWS_ACCOUNT_ID }}"
             exit 1
           fi
-          
           echo "AWS credentials verified for account $CALLER_ACCOUNT"
 
       - name: Download AWS Nuke
@@ -95,26 +84,28 @@ jobs:
           wget -c https://github.com/rebuy-de/aws-nuke/releases/download/v2.25.0/aws-nuke-v2.25.0-linux-amd64.tar.gz -O - | sudo tar -xz -C /usr/local/bin
           sudo mv /usr/local/bin/aws-nuke-v2.25.0-linux-amd64 /usr/local/bin/aws-nuke
           sudo chmod +x /usr/local/bin/aws-nuke
-
-          # Verify installation
           aws-nuke version
 
       - name: Update Config File with Account ID
         run: |
-          echo "Updating config file for account ${{ inputs.AWS_ACCOUNT_ID }}..."
-          
-          # Replace the templated account ID with the actual account ID
+          echo "Updating config file for account ${{ inputs.AWS_ACCOUNT_ID }}..."        
           sed -i "s/AWS_ACCOUNT_ID_PLACEHOLDER/${{ inputs.AWS_ACCOUNT_ID }}/g" aws-nuke-config.yaml
-          
           echo "Config file updated for account ${{ inputs.AWS_ACCOUNT_ID }}"
-          
-          # Validate config file syntax
-          aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} resource-types > /dev/null
-          echo "Config file syntax is valid"
-
+        
       - name: List Resources to be Deleted
         run: |
-          aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} resource-types
+          echo "Listing resources that will be deleted (dry-run)..."
+          aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} > resources-before.txt 2>&1 || true
+          echo "Resources before nuke:"
+          cat resources-before.txt
+          
+          # Extract counts from dry-run output
+          if grep -q "Scan complete:" resources-before.txt; then
+            TOTAL_BEFORE=$(grep "Scan complete:" resources-before.txt | grep -o '[0-9]* total' | grep -o '[0-9]*')
+            NUKEABLE_BEFORE=$(grep "Scan complete:" resources-before.txt | grep -o '[0-9]* nukeable' | grep -o '[0-9]*')
+            FILTERED_BEFORE=$(grep "Scan complete:" resources-before.txt | grep -o '[0-9]* filtered' | grep -o '[0-9]*')
+            echo "BEFORE: $TOTAL_BEFORE total, $NUKEABLE_BEFORE nukeable, $FILTERED_BEFORE filtered"
+          fi
           
       - name: Execute AWS Nuke
         run: |
@@ -122,7 +113,6 @@ jobs:
           echo "Account: ${{ inputs.AWS_ACCOUNT_ID }}"
           echo "Timestamp: $(date)"
           
-          # Execute aws-nuke with the specified flags
           aws-nuke \
             --config aws-nuke-config.yaml \
             --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} \
@@ -135,15 +125,50 @@ jobs:
         run: |
           echo "Verifying account is clean..."
           
-          # List remaining resources
-          REMAINING_RESOURCES=$(aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} resource-types 2>/dev/null | wc -l)
+          # List resources after nuke (dry-run)
+          echo "Listing resources after nuke (dry-run)..."
+          aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} > resources-after.txt 2>&1 || true
+          echo "Resources after nuke:"
+          cat resources-after.txt
           
-          if [ "$REMAINING_RESOURCES" -gt 0 ]; then
-            echo "WARNING: $REMAINING_RESOURCES resource types still exist"
-            echo "Remaining resources:"
-            aws-nuke --config aws-nuke-config.yaml --access-key-id ${AWS_ACCESS_KEY_ID} --secret-access-key ${AWS_SECRET_ACCESS_KEY} resource-types
+          # Extract counts from after dry-run output
+          if grep -q "Scan complete:" resources-after.txt; then
+            TOTAL_AFTER=$(grep "Scan complete:" resources-after.txt | grep -o '[0-9]* total' | grep -o '[0-9]*')
+            NUKEABLE_AFTER=$(grep "Scan complete:" resources-after.txt | grep -o '[0-9]* nukeable' | grep -o '[0-9]*')
+            FILTERED_AFTER=$(grep "Scan complete:" resources-after.txt | grep -o '[0-9]* filtered' | grep -o '[0-9]*')
+            echo "AFTER: $TOTAL_AFTER total, $NUKEABLE_AFTER nukeable, $FILTERED_AFTER filtered"
+          fi
+          
+          # Compare before and after
+          echo ""
+          echo "=== COMPARISON ==="
+          if [ -f resources-before.txt ] && [ -f resources-after.txt ]; then
+            if grep -q "Scan complete:" resources-before.txt && grep -q "Scan complete:" resources-after.txt; then
+              echo "BEFORE: $TOTAL_BEFORE total, $NUKEABLE_BEFORE nukeable, $FILTERED_BEFORE filtered"
+              echo "AFTER:  $TOTAL_AFTER total, $NUKEABLE_AFTER nukeable, $FILTERED_AFTER filtered"
+              
+              echo ""
+              echo "=== SUMMARY ==="
+              DELETED_TOTAL=$((TOTAL_BEFORE - TOTAL_AFTER))
+              DELETED_NUKEABLE=$((NUKEABLE_BEFORE - NUKEABLE_AFTER))
+              
+              echo "Resources deleted: $DELETED_TOTAL total ($DELETED_NUKEABLE nukeable)"
+              echo "Resources remaining: $TOTAL_AFTER total ($NUKEABLE_AFTER nukeable)"
+              
+              if [ "$TOTAL_AFTER" -eq 0 ]; then
+                echo "SUCCESS: All resources have been deleted!"
+              elif [ "$NUKEABLE_AFTER" -eq 0 ]; then
+                echo "SUCCESS: All nukeable resources have been deleted!"
+                echo "NOTE: $FILTERED_AFTER filtered resources remain (these are protected by config)"
+              else
+                echo "WARNING: $NUKEABLE_AFTER nukeable resources still exist"
+                echo "These resources may have dependencies or protection enabled"
+              fi
+            else
+              echo "Could not parse scan results from before/after files"
+            fi
           else
-            echo "Account appears to be clean"
+            echo "Could not perform comparison - missing before/after files"
           fi
 
       - name: Create Summary Report
